syntax = "proto3";

option csharp_namespace = "SpiritGrpcServer";

package user;

service UserActions {
	rpc GetUser(UserReqModel) returns (UserResModel);
	rpc GetAllUsers(AllUsers) returns (stream UserResModel);
}

message AllUsers {

}

message UserReqModel {
	string email = 1;
}

message UserResModel {
	string id = 1;
	string name = 2;
	string email = 3;
	int32 age = 4;
}